# RIM-Online

./: .gitignore  INCONSISTENCIES.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: defaults.json
pages/: 0_Welcome.py  1_Paddock_Profile.py  2_Strategy.py  3_Results_Economics.py  3_Results_Population.py  3_Results_Tables.py  3_Results_Yields.py  4_Export.py  5_Contact_Details.py  5_Credits_Info.py
rim/: __init__.py  defaults.py  economics.py  engine.py  options.py  ryegrass.py  seed_bank.py  yields.py
tests/: test_simulation.py
utils/: __init__.py  charts.py  export.py  session.py  theme.py
