[build-system]
requires = ["setuptools>=40"]
build-backend = "setuptools.build_meta"

[project]
name = "rim-online"
version = "0.1.0"
description = "Ryegrass Integrated Management – Streamlit app"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["rim*", "utils*"]
